--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -17,7 +17,7 @@ $grid-gutter-width: 20px;
 
 $white: #ffffff;
 $black: #000000;
-$primary: #11E274A;
+$primary: #1E274A;
 $secondary: #000000;
 
 // Links
