--- a/layouts/partials/hero-image-fullscreen.html
+++ b/layouts/partials/hero-image-fullscreen.html
@@ -3,7 +3,7 @@
     <div class="hero-text">
       <span class="hero-section">{{ .section }}</span>
       <h1>{{ .heading }}</h1>
-      <p>{{ .subheading }}</p>
+      <p><object data="main/calendar.svg" width="30" height="30"></object> {{ .subheading }}</p>
     </div>
     <div class="hero-down">
       <a href="#home">
