--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -5,12 +5,14 @@
         <div class="sub-footer-inner">
           <ul>
             {{ if .Site.Data.contact.phone }}
-            <li><strong>Phone: </strong>{{ .Site.Data.contact.phone }}</li>
+            <li><strong>Phone: </strong><a href="tel:{{ .Site.Data.contact.phone }}">
+              {{ .Site.Data.contact.phone }}</a></li>
             {{ end }}
             {{ if .Site.Data.contact.email }}
             <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
                 {{ .Site.Data.contact.email }}</a></li>
               {{ end }}
+        
           </ul>
           <ul>
             <li class="zerostatic"><a href="https://www.ch.tudelft.nl">www.ch.tudelft.nl</a></li>
