--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,6 +16,7 @@
 {{ end }}
 
 {{ define "main" }}
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 {{ partial "hero-image-fullscreen.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
 
