--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,7 @@
 @import 'bootstrap/grid';
 @import 'bootstrap/type';
 @import 'bootstrap/tables';
+@import 'bootstrap/breadcrumb';
 // @import "bootstrap/images";
 // @import "bootstrap/code";
 @import "bootstrap/forms";
@@ -27,7 +28,6 @@
 // @import "bootstrap/nav";
 // @import "bootstrap/navbar";
 // @import "bootstrap/card";
-// @import "bootstrap/breadcrumb";
 // @import "bootstrap/pagination";
 // @import "bootstrap/badge";
 // @import "bootstrap/jumbotron";
@@ -71,9 +71,9 @@
 @import 'pages/services/page-services-list';
 @import 'pages/services/page-services-single';
 @import 'pages/services/service-summary';
-@import 'pages/work/work-summary';
-@import 'pages/work/page-work-single';
-@import 'pages/work/page-work-list';
+@import 'pages/companies/work-summary';
+@import 'pages/companies/page-work-single';
+@import 'pages/companies/page-work-list';
 
 // Display breakpoints for DEV
 // body:after {
