--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,7 +19,7 @@
 // @import "bootstrap/images";
 // @import "bootstrap/code";
 @import "bootstrap/forms";
-// @import "bootstrap/buttons";
+@import "bootstrap/buttons";
 // @import "bootstrap/transitions";
 // @import "bootstrap/dropdown";
 // @import "bootstrap/button-group";
