--- a/assets/scss/pages/companies/_page-work-single.scss
+++ b/assets/scss/pages/companies/_page-work-single.scss
@@ -31,3 +31,33 @@
     margin: 0 0 1em;
   }
 }
+
+.comp-info {
+  border-style: solid;
+  border-width: 1px;
+  // background-color: #e9ecef;
+  // border-radius: 1em;
+  padding: 10%;
+  padding-top: 5%;
+
+  .logo {
+    min-width: 70%;
+    // max-height: 200px;
+    max-width: 100%;
+    margin: auto;
+    margin-bottom: 1em;
+  }
+  .comp-info-unit {
+    padding-bottom: 1em;
+    a {
+      display: inline-block;
+    }
+    img {
+      width: 7%;
+      margin-right: 1em;
+      // margin: 1em;
+      // margin-bottom: 0.5em;
+    }
+
+  }
+}
