--- a/assets/scss/pages/companies/_page-work-single.scss
+++ b/assets/scss/pages/companies/_page-work-single.scss
@@ -33,8 +33,8 @@
 }
 
 .comp-info {
-  border-style: solid;
-  border-width: 1px;
+  // border-style: solid;
+  // border-width: 1px;
   // background-color: #e9ecef;
   // border-radius: 1em;
   padding: 10%;
@@ -52,6 +52,8 @@
     }
   }
   .comp-info-unit {
+    width: 100%;
+    // text-align: center;
     padding-bottom: 1em;
     a {
       hyphens: auto;
