--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -71,6 +71,7 @@
 @import 'pages/services/page-services-list';
 @import 'pages/services/page-services-single';
 @import 'pages/services/service-summary';
+@import 'pages/companies/work-thumbnail';
 @import 'pages/companies/work-summary';
 @import 'pages/companies/page-work-single';
 @import 'pages/companies/page-work-list';
