--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,10 +19,10 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 {{ partial "hero-image-fullscreen.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
 
-<!-- {{ $headless := .Site.GetPage "/homepage" }}
+{{ $headless := .Site.GetPage "/homepage" }}
 {{ $reusablePages := $headless.Resources.ByType "page" }}
 {{ $reusablePages := sort $reusablePages ".Params.weight" }}
-{{ range first 1 $reusablePages }}
+<!-- {{ range first 1 $reusablePages }}
 <div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('{{ .Params.background | relURL }}');">
   <div class="container pt-17 pb-17">
     <div class="row">
@@ -38,7 +38,7 @@
 
 {{ $services := where (where .Site.RegularPages "Type" "services") ".Params.featured" true }}
 {{if gt (len $services) 0}}
-<div id="home" class="container pt-8 pb-8 pb-md-14 pt-md-14">
+<div id="home" class="container pt-8 pb-8 pb-md-5 pt-md-14">
   <div class="row justify-content-start">
     <div class="col-12">
       <h2 class="text-center mb-3">About COD</h2>
@@ -46,6 +46,22 @@
     {{ range first 6 (sort $services ".Params.weight") }}
     <div class="col-12 col-md-4 mb-1">
       {{ .Render "summary" }}
+    </div>
+    {{ end }}
+  </div>
+</div>
+{{end}}
+
+{{ $companies := where .Site.RegularPages "Type" "companies" }}
+{{if gt (len $companies) 0}}
+<div id="home" class="container pt-8 pb-8 pb-md-14 pt-md-0">
+  <div class="row justify-content-start">
+    <div class="col-12">
+      <h2 class="text-center mb-3">Companies</h2>
+    </div>
+    {{ range $companies }}
+    <div class="col-12 col-md-2 mb-1">
+      {{ .Render "thumbnail" }}
     </div>
     {{ end }}
   </div>
