--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,7 +12,7 @@
           {{ end }}
           <ul class="footer-menu">
             <li><a href="{{ .Site.BaseURL }}">Home</a></li>
-            <li><a href="{{ .Site.BaseURL }}contact">Contact</a></li>
+            <li><a href="{{ .Site.BaseURL }}/contact">Contact</a></li>
             <li><a href="https://ch.tudelft.nl/privacy-statement/">Privacy Statement</a></li>
           </ul>
         </div>
