--- a/layouts/companies/companies.html
+++ b/layouts/companies/companies.html
@@ -5,12 +5,10 @@
 {{ define "main" }}
 {{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "positionBackground" .Params.positionBackground "content" .)}}
 {{ partial "breadcrumbs.html" . }}
-{{ $math := .Site.GetPage "/companies/mathematics" }}
-{{ $cse := .Site.GetPage "/companies/computer_science" }}
 
 <div class="container buttons">
-<a class="btn" href="/companies/mathematics" onclick="enablemath()" id="mathbutton">Mathematics</a>
-<a class="btn" href="/companies/computer_science" onclick="enablecse()" id="csebutton">Computer Science</a>
+<button class="btn" onclick="enablemath()" id="mathbutton">Mathematics</button>
+<button class="btn" onclick="enablecse()" id="csebutton">Computer Science</button>
 </div>
 
 <div class="container pb-6 pb-md-10">
@@ -23,10 +21,12 @@
 
 <script>
     function enablemath() {
+        window.location.href="/companies/mathematics/"
         document.getElementById("mathbutton").disabled = true
         document.getElementById("csebutton").disabled = false
     }
     function enablecse() {
+        window.location.href="/companies/computer_science/"
         document.getElementById("mathbutton").disabled = false
         document.getElementById("csebutton").disabled = true
     }
