--- a/layouts/companies/summary.html
+++ b/layouts/companies/summary.html
@@ -12,6 +12,6 @@
         {{ end }}
       </a>
     </h2>
-    {{ .Content | truncate 120 "..." | plainify }}
+    {{ .Content | plainify | htmlUnescape | truncate 120 "..." }}
   </div>
 </div>
